--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     margin: 0;
-    background-color: #F4F4F4;
+    background-color: rgba(255, 255, 255, 0.3);
     font-family: Poppins;
 }
 
@@ -33,31 +33,11 @@ body {
     --item5-opacity: 0;
 }
 
-header {
-    width: 1140px;
-    max-width: 90%;
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-    height: 50px;
-    align-items: center;
-}
-
-header .logo {
-    font-weight: bold;
-}
-
-header nav a {
-    margin-left: 30px;
-    text-decoration: none;
-    color: #555;
-    font-weight: 500;
-}
 
 /* carousel */
 .carousel {
     position: relative;
-    height: 800px;
+    height: 930px;
     overflow: hidden;
     margin-top: -50px;
 }
@@ -73,7 +53,7 @@ header nav a {
 
 .carousel .list .item {
     position: absolute;
-    left: 0%;
+    left: 5%;
     width: 70%;
     height: 100%;
     font-size: 15px;
@@ -256,19 +236,19 @@ header nav a {
 
 /* previous */
 .carousel.prev .list .item:nth-child(5) {
-    animation: transformFromPosition4 0.5s ease-in-out 1 forwards;
+    animation: transformFromPosition4 0.2s ease-in-out 1 forwards;
 }
 
 .carousel.prev .list .item:nth-child(4) {
-    animation: transformFromPosition3 0.7s ease-in-out 1 forwards;
+    animation: transformFromPosition3 0.4s ease-in-out 1 forwards;
 }
 
 .carousel.prev .list .item:nth-child(3) {
-    animation: transformFromPosition2 0.9s ease-in-out 1 forwards;
+    animation: transformFromPosition2 0.6s ease-in-out 1 forwards;
 }
 
 .carousel.prev .list .item:nth-child(2) {
-    animation: transformFromPosition1 1.1s ease-in-out 1 forwards;
+    animation: transformFromPosition1 0.8s ease-in-out 1 forwards;
 }
 
 @keyframes transformFromPosition1 {
@@ -454,6 +434,14 @@ header nav a {
 
 
 @media screen and (max-width: 991px) {
+
+    .carousel {
+        position: relative;
+        height: 900px;
+        overflow: hidden;
+        margin-top: -50px;
+    }
+
     /* ipad, tablets */
     .carousel .list .item {
         width: 90%;
@@ -539,6 +527,7 @@ header nav a {
 
 @media screen and (max-width: 1200px) {
 
+
     /*Text*/
     .text-title {
         font-size: 1.3em;
@@ -568,10 +557,17 @@ header nav a {
 
 }
 
+@media screen and (max-width: 800px) {
+    .carousel {
+        height: 960px;
+    }
+
+}
+
 @media screen and (max-width: 600px) {
     /* mobile */
     .carousel {
-        height: 780px;
+        height: 860px;
     }
 
     .carousel .list .item {
