--- a/style.css
+++ b/style.css
@@ -104,10 +104,6 @@ body {
     font-weight: 500;
 }
 
-.carousel .list .item .introduce .des {
-    font-size: small;
-    color: rgba(58, 55, 55, 0.6);
-}
 
 .carousel .list .item .introduce .seeMore {
     font-family: Poppins, serif;
@@ -437,6 +433,11 @@ body {
 
 @media screen and (max-width: 991px) {
 
+    .carousel .list .item .introduce .des {
+        font-size: 150%;
+        color: rgba(58, 55, 55, 0.6);
+    }
+
     .carousel {
         position: relative;
         height: 870px;
@@ -491,6 +492,12 @@ body {
 
 /* For devices with a screen width up to 1200px */
 @media screen and (min-width: 1200px) {
+
+    .carousel .list .item .introduce .des {
+        font-size: 170%;
+        color: rgba(58, 55, 55, 0.6);
+    }
+
     .carousel .list .item {
         width: 85%;
     }
@@ -501,12 +508,12 @@ body {
 
     /*Text*/
     .text-title {
-        font-size: 1.3em;
+        font-size: 1.6em;
         font-weight: bold;
     }
 
     .text-body {
-        font-size: 0.9em;
+        font-size: 1.2em;
         color: rgb(85, 82, 82);
     }
 
@@ -529,6 +536,7 @@ body {
 }
 
 @media screen and (max-width: 1200px) {
+
 
 
     /*Text*/
@@ -561,6 +569,12 @@ body {
 }
 
 @media screen and (max-width: 800px) {
+
+    .carousel .list .item .introduce .des {
+        font-size: 140%;
+        color: rgba(58, 55, 55, 0.6);
+    }
+
     .carousel {
         height: 960px;
     }
@@ -568,6 +582,12 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+
+    .carousel .list .item .introduce .des {
+        font-size: 130%;
+        color: rgba(58, 55, 55, 0.6);
+    }
+
     /* mobile */
     .carousel {
         height: 860px;
