--- a/style.css
+++ b/style.css
@@ -430,15 +430,63 @@ body {
 
 /* ////////////////// Screen Size ////////////////// */
 
-
-/* For devices with a screen width up to 1200px */
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1441px) {
 
     .carousel .list .item .introduce .topic {
         font-size: 6em;
         font-weight: 500;
     }
 
+    .carousel .list .item .introduce .des {
+        width: 180%;
+        font-size: 200%;
+        color: rgba(58, 55, 55, 0.6);
+    }
+
+    .carousel .list .item {
+        width: 85%;
+    }
+
+    .carousel.showDetail .list .item:nth-child(2) .detail .title {
+        font-size: 1.8em;
+    }
+
+    /*Text*/
+    .text-title {
+        font-size: 1.8em;
+        font-weight: bold;
+    }
+
+    .text-body {
+        font-size: 1.4em;
+        color: rgb(85, 82, 82);
+    }
+
+    /* Card Detail */
+    .card {
+        margin-top: 120px;
+        width: 390px;
+        height: 860px;
+        border-radius: 20px;
+        position: relative;
+        padding: 1.8rem;
+        border: 2px solid #c3c6ce;
+        -webkit-transition: 0.5s ease-out;
+        transition: 0.5s ease-out;
+        overflow: visible;
+        background-color: rgba(255, 255, 255, 0.3);
+        animation: glowing-border 5s linear infinite;
+    }
+
+}
+
+/* For devices with a screen width up to 1200px */
+@media screen and (max-width: 1440px) {
+
+    .carousel .list .item .introduce .topic {
+        font-size: 6em;
+        font-weight: 500;
+    }
 
     .carousel .list .item .introduce .des {
         width: 180%;
@@ -467,9 +515,9 @@ body {
 
     /* Card Detail */
     .card {
-        margin-top: 150px;
+        margin-top: 90px;
         width: 390px;
-        height: 770px;
+        height: 740px;
         border-radius: 20px;
         position: relative;
         padding: 1.8rem;
@@ -484,7 +532,8 @@ body {
 }
 
 
-@media screen and (max-width: 991px) {
+/* Ipad */
+@media screen and (max-width: 768px) {
 
     .carousel .list .item .introduce .des {
         font-size: 150%;
@@ -526,7 +575,7 @@ body {
     .card {
         margin-top: 170px;
         width: 390px;
-        height: 720px;
+        height: 700px;
         border-radius: 20px;
         position: absolute;
         left: 20%;
@@ -541,20 +590,8 @@ body {
 
 }
 
-@media screen and (max-width: 800px) {
 
-    .carousel .list .item .introduce .des {
-        font-size: 140%;
-        color: rgba(58, 55, 55, 0.6);
-    }
-
-    .carousel {
-        height: 960px;
-    }
-
-}
-
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 390px) {
 
     .carousel .list .item .introduce .des {
         font-size: 130%;
@@ -849,13 +886,3 @@ body {
     }
 }
 
-
-
-.animated {
-    animation: up-down 2s ease-in-out infinite alternate-reverse both;
-}
-
-.icon-link {
-    width: auto;
-    height: 5%;
-}
